fixed small bug on mobile navbar

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -33,7 +33,7 @@
   width: 100px;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 500px) {
   #navbar .hamburger {
     width: 55px;
   }
